# SFS

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  errors.rs  main.rs  state.rs
src/auth/: jwt.rs  middleware.rs  mod.rs
src/database/: mod.rs
src/handlers/: auth.rs  files.rs  health.rs  mod.rs  profile.rs
static/: index.html  style.css
