[package]
name = "SFS"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }

tokio-util = { version = "0.7", features = ["io"] }

tower-http = { version = "0.5", features = ["fs"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dotenvy = "0.15"
thiserror = "1"

argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }

jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
